--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,14 @@
-flask
-Jinja2
-joblib
+Flask
 gunicorn
-kiwisolver
+itsdangerous
+Jinja2
 MarkupSafe
+Werkzeug
+numpy
+scipy
+scikit-learn
 matplotlib
 pandas
-numpy
-
-Pillow
-pipreqs
-pyparsing
-python-dateutil
-pytz
-requests
-opencv-python
-
-six
-
-threadpoolctl
-urllib3
-Werkzeug
-yarg
-nltk
-
-
-
+flasgger
 keras
 tensorflow-cpu
